# nanj-fretboard

./: .gitignore  Cargo.toml  build.sh  index.html  package.json
src/: Fretboard.scss  Fretboard.ts  Key.scss  Key.ts  MainView.html  MainView.scss  MainViewController.ts  NanJ.scss  NanJ.ts  NotePad.scss  NotePad.ts  Question.ts  Util.ts  accidental.rs  app.rs  asset.rs  dispatcher.rs  fretboard.rs  keyboard.rs  lib.rs  main.ts  nanj.rs  question.rs  root_view.rs  runtime.rs  style.css  task_queue.rs  types.ts  util.rs  view.rs
