[package]
name = "nanj-fretboard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.10"
js-sys = "0.3.94"
wasm-bindgen = "0.2.117"
web-sys = {
  version = "0.3.94",
  features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "Performance",
    "PointerEvent",
    "console",
  ]
}
