[package]
name = "nanj-fretboard"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
image = "0.25.10"
js-sys = "0.3.94"
rand = "0.10.0"
wasm-bindgen = "0.2.117"
web-sys = {
  version = "0.3.94",
  features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "Performance",
    "PointerEvent",
    "TextMetrics",
    "console",
  ]
}
